@@ -1,3 +1,9 @@
+2004-08-29  Karl Runge <runge@karlrunge.com>
+	* x11vnc: yet another pointer input handling algorithm in
+	  check_user_input(), revert to previous with -old_pointer2.
+	* modifiy prepare_x11vnc_dist.sh to install tightvnc Java viewer
+	  in $prefix/share/x11vnc/classes
+
 2004-08-29  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
 	* */*.[ch]: API changes: global functions/structures should have
 	*   either "rfb", "sra" or "zrle" as prefix, while structure members
